[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Introduction to function calling in LLMs"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pydantic",
]

[dependency-groups]
dev = [
    "flake8",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"