[project]
name = "call-me-maybe"
version = "1.0.0"
description = "Introduction to function calling in LLMs"
authors = [{name = "aunoguei"}]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pydantic",
    "torch",
    "transformers",
    "huggingface-hub",
]

[dependency-groups]
dev = [
    "flake8",
    "mypy",
]

[tool.flake8]
exclude = ["__pycache__", ".venv", "llm_sdk", ".mypy_cache"]

[tool.mypy]
exclude = ["__pycache__", ".venv", "llm_sdk"]
disable_error_code = ["import-untyped"]